--- a/index.html
+++ b/index.html
@@ -98,5 +98,24 @@ printing and typesetting industry.
     </div>
   </div>
 
+<section>
+    <div class=tago>
+
+<h3>Work Inquiry</h3>
+    </div>
+    <div class=tago>
+
+            </div>
+    <div class="box-1">
+        
+         </div>
+        
+         <div class="button-ow">
+             <a href="https://www.youtube.com/channel/UCWOeN-H0LlhRTt-9I1CBK0w/videos?view_as=subscriber">click hear</a>
+
+
+
+</section>
+
 </body>
 </html>
